# file-conversion-and-compression

./: .gitignore
backend/: README.md  pyproject.toml
backend/fileconverter/: __init__.py  rom_formats.py  textures.py
docker/: Dockerfile.api  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
fileconverter/: audio.py  disk_images.py
frontend/: package-lock.json
